--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.12.2",
-    "lucide": "^0.548.0",
+    "install": "^0.13.0",
+    "lucide-vue-next": "^0.548.0",
+    "npm": "^11.6.2",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.16",
     "vue": "^3.5.22",
