--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,9 @@ services:
         ports:
           - "5173:5173"
         volumes:
-            - ./frontend:/app
+            - ./frontend/src:/app/src
+            - ./frontend/public:/app/public
+            - frontend_node_modules:/app/node_modules
         networks:
             - app-network
         
