--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,8 @@ services:
         ports:
           - "5173:5173"
         volumes:
-            - ./frontend/src:/app/src
-            - ./frontend/public:/app/public
-            - frontend_node_modules:/app/node_modules
+            - ./frontend:/app
+            - /app/node_modules 
         networks:
             - app-network
         
@@ -77,6 +76,3 @@ services:
 networks:
     app-network:
         driver: bridge
-
-volumes:
-    frontend_node_modules:
